# mbd-tfm

./: .dockerignore  .gitignore  Makefile  README.md  compose.json  magento-setup.sh  temp.sql
analytics/: compose-spark-cluster.json  compose.json
analytics/env/: spark-cluster.env  spark-connect.env  spark-history.env  spark-master.env  spark-worker.env
api/: Dockerfile  compose.json  smoke-tests.py
api/env/: api.env
api/src/: main.py  main_smoke_tests.py  main_webapi.py  main_webapp.py  playground.ipynb  pyproject.toml  requirements.txt  smoke-tests.py  web_api.py
api/src/analytics/: sc_data.py  sc_embeddings.py  sc_embeddings_w2v.py  sc_session.py
api/src/commons/: check_ip_port.py  constants.py
api/src/webapi/: data_management.py  embeddings_processing.py  main_ui.py
api/src/webapp/: webui.py
docs/: bibliografia.txt  mbdtfm.lyx
ecommerce/: create-categories.sh  create-product-json-view.sh  magento-setup.sh  sample-data.sh  setup-db-mview-event.sh  setup-db-mview-sp.sh  setup-db-mview-table.sh  setup-db-permissions.sh  setup-db-product-json-view.sh  setup-magento-ecommerce.sh  setup-magento-sample-data.sh  update-permissions.sh
ecommerce/sql-scripts/: create-product-json-view.sh  setup-materialized-view.sh  update-permissions.sh
ingestion/: compose.json  register-sink.sh  register-source.sh
ingestion/env/: dbz-connect.env  kafka.env
storage/: compose.json
storage/env/: mongodb.env
storage/mongodb/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-4073997712047431583.wt  collection-2-4073997712047431583.wt  (+6 more)
storage/scripts/: create-embeddings-collection.sh
utils/: compose.json
utils/env/: debezium-ui.env  kafka-ui.env
utils/kafka-ui/: config.yml
utils/kui/: config.yaml
(+3 files in other folders)
